[package]
name = "okra"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "create-action"
path = "src/util/create_action.rs"

[[bin]]
name = "link-action"
path = "src/util/link_action.rs"

[dependencies]
env_logger = "0.9.0"
log = "0.4.14"
# normal = { git = "https://github.com/jonathanlb/normal" }
normal = { path = "../normal" }
rocket = "0.5.0-rc.1"
rocket_contrib = "0.4.10"
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
# rocket_cors = "0.5.2"
rust-crypto = "^0.2"
structopt = "0.3.17"
