[package]
name = "okra"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "add-user"
path = "src/util/add_user.rs"

[[bin]]
name = "create-action"
path = "src/util/create_action.rs"

[[bin]]
name = "link-action"
path = "src/util/link_action.rs"

[dependencies]
bcrypt = "0.10.1"
env_logger = "0.9.0"
log = "0.4.14"
normal = { git = "https://github.com/jonathanlb/normal" }
# normal = { path = "../normal" }
rocket = { version = "0.5.0-rc.1", features = ["secrets", "tls", "json"] }
rocket_contrib = "0.4.10"
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
serde = "1.0.130"
serde_json = "1.0.67"
sqlite = "0.25.3" 
structopt = "0.3.17"
